infra/k8s/ingress/ingress-simpel-kejaksaan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpel-kejaksaan-ingress
  namespace: simpelv2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - simpel.kejaksaan.go.id
    - www.simpel.kejaksaan.go.id
    secretName: simpel-kejaksaan-tls
  rules:
  - host: simpel.kejaksaan.go.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
  - host: www.simpel.kejaksaan.go.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
